fixed layout shift

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -24,6 +24,7 @@ iframe{
 }
 .container{
     margin-bottom: 2rem;
+    width: 100%;
 }
 .categories{
     display: flex;
@@ -99,6 +100,7 @@ label:hover{
 
 ::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
 }
  
 /* Track */
